<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_sort" android:title="@string/sort" android:icon="@drawable/ic_sort" app:showAsAction="always">
        <menu>
            <item android:id="@+id/menu_sort_desc" android:checkable="true" android:title="@string/sort_desc" />
            <group android:id="@+id/menu_group_sort" android:checkableBehavior="single">
                <item android:id="@+id/menu_sort_manual" android:checkable="true" android:checked="true" android:title="@string/sort_manual" />
                <item android:id="@+id/menu_sort_name" android:checkable="true" android:title="@string/sort_by_name" />
                <item android:id="@+id/menu_sort_url" android:checkable="true" android:title="@string/sort_by_url" />
                <item android:id="@+id/menu_sort_time" android:checkable="true" android:title="@string/sort_by_lastUpdateTime" />
                <item android:id="@+id/menu_sort_respondTime" android:checkable="true" android:title="@string/sort_by_respondTime" />
            </group>
        </menu>
    </item>
    <item android:id="@+id/menu_group" android:title="@string/group" android:icon="@drawable/ic_groups" app:showAsAction="always"><menu /></item>
    <item android:id="@+id/menu_explore_source" android:title="统一源选择" android:icon="@drawable/ic_groups" app:showAsAction="never">
        <menu><group android:id="@+id/menu_explore_source_text" android:checkableBehavior="single" /></menu>
    </item>
    <item android:id="@+id/menu_explore_direct_url" android:title="直接 URL 发现" android:icon="@drawable/ic_add" app:showAsAction="never" />
    <item android:id="@+id/menu_rimchars_discovery" android:title="Rimchars 风格发现页" android:checkable="true" android:showAsAction="never" />
</menu>